Change Notes
=============

2010-06-29 RPF
	- Fixed a Bug in ZipSource (was opened twice which caused IO file lock)

2010-06-16 RPF
	- Added 'AutoDirectoryMode' in XLSFileSource. This will make it possible to import any file type (xls, xlsx) if
	  only a directory is set as a source File
	- Added directory and file prefix usage in ZipSource. It is possible now to give a directory (first zip found is taken)
	  and an optional File Prefix, then the first file matching the prefix is taken (first zip, if no matching)
	- ZipSource throws an ETLException now, if no files can be found to avoid NullPointerException
	- Fixed ZipSource/MoveFileFinalizer: if only a target path was set, the ZipSource didn't work!
	  
2010-05-14 FLI
	- Added possibility to seal/unseal a dimension
	
2010-05-12 FLI
	- DimensionEditor and MappingEditor now allows "Mass Insert" of dimensions and mappings
	- Added "Auto Assign" feature during insert, mainly for Mass Insert to automatically find a matching dimension element.
	
2010-05-10 FLI
	- CSVLoader is now able to write the output file directly into a ZIP archive.
	- Added 'ei' package for further use. Not yet integrated...
	
2010-05-07 RPF
	- CSVLoader uses "Target Column Names" now, if there are some specified

2010-05-05 jbornema
	- CubeHandler support new property <pool key>.datapool.syncTables.connection.shared for shared connections
	- JDBCExtractor logs debug of the sql statement
	- MoveFileFinalizer implements IJobFinalizer so the move can take place if the entire job executed without errors
	- ETLProcess skips records also for the transformers that have the skipped flag right away from the extractor
	- Job chainScriptName changed to a List - with addChainScriptName multiple chains can be used in the job script
	- JDBCUtil property <connection key>.connection.transactionIsolation added to support JDBC transaction isolation levels
	- DimensionMappingTransformer supports shared connections

2010-04-26 jbornema